--- a/layout_events.css
+++ b/layout_events.css
@@ -13,3 +13,56 @@ body {
 h1 {
   font-family: VerandaFont;
 }
+
+.menu-toggle {
+  display: none;
+}
+
+.burger-menu {
+  font-size: 24px;
+  cursor: pointer;
+  display: none;
+}
+
+.navbar {
+  padding: 10px;
+}
+
+.menu {
+  list-style: none;
+  display: flex;
+}
+
+.menu li {
+  margin-right: 20px;
+}
+
+.menu a {
+  text-decoration: none;
+  color: rgb(35, 19, 19);
+}
+
+/* Media query for responsive design */
+@media screen and (max-width: 600px) {
+  .menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+  }
+
+  .menu-toggle:checked + .burger-menu + .navbar .menu {
+    display: flex;
+  }
+
+  .menu li {
+    margin: 0;
+    text-align: center;
+  }
+
+  .burger-menu {
+    display: block;
+  }
+}
