--- a/about_us.css
+++ b/about_us.css
@@ -1,7 +1,25 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  margin: 1cm;
+  border: 2px solid #283274;
+  box-sizing: border-box;
+}
+
+h1 {
+  font-size: 2em;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+p {
+  font-size: 1.2em;
+  margin-bottom: 30px;
+  line-height: 1.6;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 20px;
 }
 
 .menu-toggle {
@@ -12,16 +30,20 @@ body {
   font-size: 24px;
   cursor: pointer;
   display: none;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .navbar {
-  background-color: #333;
   padding: 10px;
+  color: #283274;
 }
 
 .menu {
   list-style: none;
   display: flex;
+  right: 0;
 }
 
 .menu li {
@@ -30,7 +52,7 @@ body {
 
 .menu a {
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 /* Media query for responsive design */
