--- a/press.css
+++ b/press.css
@@ -1,7 +1,12 @@
 /* MOBILE VIEW */
-body, html {
+body {
     height: 100%;
-    margin: 0;
+  }
+
+  .border{
+     margin: 1cm;
+  border: 2px solid #283274;
+  box-sizing: border-box;
   }
 
   img{
