--- a/press.css
+++ b/press.css
@@ -1,3 +1,45 @@
+/* BURGER MENU */
+    nav{
+      display: flex;
+    align-items: center;
+    justify-content: space-between;
+    }
+
+    .logo{
+      display: block;
+    }
+
+    .logo img{
+      width: 30%;
+      height: auto;
+    }
+
+    ul{
+          display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    }
+
+
+    .burger{
+      display: block;
+      width: 30px;
+    height: 20px;
+    cursor: pointer;
+    }
+
+    .line{
+          width: 100%;
+    height: 2px;
+    background-color: #9b9387;
+    margin-bottom: 5px;
+    transition: 0.2s linear;
+    }
+
 /* MOBILE VIEW */
 body {
     height: 100%;
@@ -7,6 +49,7 @@ body {
      margin: 1cm;
   border: 2px solid #283274;
   box-sizing: border-box;
+  padding: 30px;
   }
 
   img{
@@ -39,7 +82,7 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
-    margin: 30px;
+    
 }
 .img1 {
     grid-column: 2/2;
@@ -52,7 +95,7 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
-    margin: 30px;
+    
 }
 .order{
     order: -1;
