--- a/index.css
+++ b/index.css
@@ -1,84 +1,84 @@
 /* MOBILE VIEW */
 /* @media only screen and (max-width: 600px){ */
-body, html {
-    height: 100%;
-    margin: 0;
-   background-color: #D2DEDC;
-  }
+body,
+html {
+  height: 100%;
+  margin: 0;
+  background-color: #d2dedc;
+}
 
-  .screen{
-    background-image: url('img/veranda_blueramme_mobil.svg'); /* Replace 'your-image-url.jpg' with the URL or path to your image */
-    background-size: cover;
-    
-    background-repeat: no-repeat;
-    background-position: center;
-    display: block;
-    height: 100%;
-    height: 100vh; 
-  }
+.screen {
+  background-image: url('img/veranda_blueramme_mobil.svg'); /* Replace 'your-image-url.jpg' with the URL or path to your image */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: block;
+  height: 100%;
+  height: 100vh;
+}
 
-  /* burgermenu */
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+/* burgermenu */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .menu-toggle {
-    display: none;
+  display: none;
 }
 
 .burger-menu {
-    font-size: 24px;
-    cursor: pointer;
-    display: none;
+  font-size: 24px;
+  cursor: pointer;
+  display: none;
 }
 
 .navbar {
-    background-color: #333;
-    padding: 10px;
+  background-color: #333;
+  padding: 10px;
 }
 
 .menu {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 
 .menu li {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .menu a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 @media screen and (max-width: 600px) {
-    .menu {
-        display: none;
-        flex-direction: column;
-        background-color: #333;
-        position: absolute;
-        top: 60px;
-        left: 0;
-        width: 100%;
-    }
+  .menu {
+    display: none;
+    flex-direction: column;
+    background-color: #333;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+  }
 
-    .menu-toggle:checked + .burger-menu + .navbar .menu {
-        display: flex;
-    }
+  .menu-toggle:checked + .burger-menu + .navbar .menu {
+    display: flex;
+  }
 
-    .menu li {
-        margin: 0;
-        text-align: center;
-    }
+  .menu li {
+    margin: 0;
+    text-align: center;
+  }
 
-    .burger-menu {
-        display: block;
-    }
+  .burger-menu {
+    display: block;
+  }
 }
 
-.logo{
+.logo {
   width: 70%;
   height: auto;
   position: absolute;
@@ -89,52 +89,52 @@ body, html {
 
 /* mellem view */
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
-    body, html {
-        height: 100%;
-        margin: 0;
-      }
-    
-      .screen{
-        background-image: url(img/veranda_ramme_med.svg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        width: 100vw;
-        height: 100vh; 
-      }
+  body,
+  html {
+    height: 100%;
+    margin: 0;
+  }
 
-.logo{
+  .screen {
+    background-image: url(img/veranda_ramme_med.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .logo {
     width: 25%;
     height: auto;
     position: absolute;
     top: 24%;
     left: 40%;
-}
+  }
 }
 
 /* DESKTOP VIEW */
 @media only screen and (min-width: 1025px) {
-    /* ramme */
-    body, html {
-        height: 100%;
-        margin: 0;
-      }
-    
-      .screen{
-        background-image: url(img/veranda_blueramme_desktop.svg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        width: 100vw;
-        height: 100vh;
-        
-      }
-.logo{
+  /* ramme */
+  body,
+  html {
+    height: 100%;
+    margin: 0;
+  }
+
+  .screen {
+    background-image: url(img/veranda_blueramme_desktop.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+  }
+  .logo {
     width: 25%;
     height: auto;
     position: absolute;
     top: 24%;
     left: 40%;
+  }
 }
-      
-    }
