--- a/press.css
+++ b/press.css
@@ -1,72 +1,71 @@
 /* BURGER MENU */
-    nav{
-      display: flex;
-    align-items: center;
-    justify-content: space-between;
-    }
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-    .logo{
-      display: block;
-    }
+.logo {
+  display: block;
+}
 
-    .logo img{
-      width: 30%;
-      height: auto;
-    }
+.logo img {
+  width: 30%;
+  height: auto;
+}
 
-    ul{
-          display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-    }
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
 
+.burger {
+  display: block;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
 
-    .burger{
-      display: block;
-      width: 30px;
-    height: 20px;
-    cursor: pointer;
-    }
-
-    .line{
-          width: 100%;
-    height: 2px;
-    background-color: #9b9387;
-    margin-bottom: 5px;
-    transition: 0.2s linear;
-    }
+.line {
+  width: 100%;
+  height: 2px;
+  background-color: #9b9387;
+  margin-bottom: 5px;
+  transition: 0.2s linear;
+}
 
 /* MOBILE VIEW */
 body {
-    height: 100%;
-  }
+  height: 100%;
+}
 
-  .border{
-     margin: 1cm;
+.border {
+  margin: 1cm;
   border: 2px solid #283274;
   box-sizing: border-box;
   padding: 30px;
-  }
+}
 
-  img{
-    width: 70%;
-    align-items: center;
-  }
-
+img {
+  width: 70%;
+  align-items: center;
+}
 
 /* COMPUTER VIEW */
 @media (min-width: 800px) {
-    /* ramme */
-    body, html {
-        height: 100%;
-        margin: 0;
-      }
-    /* udkommenterede rammen fordi den ik passer */
-      /* .screen{
+  /* ramme */
+  body,
+  html {
+    height: 100%;
+    margin: 0;
+  }
+  /* udkommenterede rammen fordi den ik passer */
+  /* .screen{
         background-image: url('img_press/veranda_ramme_desktop.svg'); 
         background-size: cover;
         background-repeat: no-repeat;
@@ -75,33 +74,26 @@ body {
         overflow: hidden;
       } */
 
-
-
-.container_1_1{
+  .container_1_1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
-    
-}
-.img1 {
+  }
+  .img1 {
     grid-column: 2/2;
     grid-row: 1/3;
-}
+  }
 
-
-.container2_1_1{
+  .container2_1_1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
-    
-}
-.order{
+  }
+  .order {
     order: -1;
     grid-column: 1/2;
     grid-row: 1/3;
-}
-
-
+  }
 }
