--- a/press.css
+++ b/press.css
@@ -6,7 +6,7 @@ header {
 }
 
 .logo img {
-  width: 30%;
+  width: 37%;
   height: auto;
 }
 
@@ -21,11 +21,15 @@ nav {
   list-style: none;
   margin: 0;
   padding: 0;
+  justify-content: space-between;
+  width: 825px;
+  position: absolute;
+  left: 22%;
 }
 
-.menu li {
+/* .menu li {
   margin-right: 20px;
-}
+} */
 
 .menu li:last-child {
   margin-right: 0;
