--- a/press.css
+++ b/press.css
@@ -1,4 +1,4 @@
-/* BURGER MENU */
+/* BURGER MENU I MOBILEVIEW*/
 header {
   padding: 20px;
   /* background-color: rgba(238, 218, 192, 1);
@@ -36,7 +36,7 @@ nav {
 }
 
 .menu a {
-  display: block;
+  display: flex;
   padding: 10px;
   color: #000d3f;
   text-decoration: none;
@@ -107,6 +107,10 @@ nav {
   nav.active .menu a {
     font-size: 20px;
   }
+
+  li {
+    width: 100%;
+  }
 }
 
 /* SIDEN I MOBILE VIEW */
@@ -122,9 +126,33 @@ body {
   padding: 30px;
 }
 
+h1 {
+  margin-bottom: 40px;
+}
+
+/* .p_press {
+  gjør den italic
+} */
+
+.center_img {
+  margin: 0 auto;
+}
+
+.img1,
+.order {
+  position: relative;
+  left: 15%;
+  margin: 20px 0px;
+}
+
 img {
   width: 70%;
-  align-items: center;
+  display: grid;
+  position: relative;
+}
+
+.container2_1_1 {
+  margin-top: 50px;
 }
 
 /* SIDEN I COMPUTER VIEW */
@@ -161,6 +189,7 @@ img {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
+    margin-top: 0px;
   }
   .order {
     order: -1;
