--- a/index.css
+++ b/index.css
@@ -17,124 +17,114 @@ html {
   height: 100vh;
 }
 
-/* burgermenu */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+/* BURGER MENU I MOBILEVIEW*/
+header {
+  padding: 20px;
 }
 
-.menu-toggle {
-  display: none;
+.logo img {
+  width: 37%;
+  height: auto;
 }
 
-.burger-menu {
-  font-size: 24px;
-  cursor: pointer;
-  display: none;
-}
-
-.navbar {
-  background-color: #333;
-  padding: 10px;
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .menu {
-  list-style: none;
   display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
+  position: absolute;
+  left: 61%;
 }
 
-.menu li {
+/* .menu li {
   margin-right: 20px;
+} */
+
+.menu li:last-child {
+  margin-right: 0;
 }
 
 .menu a {
+  display: flex;
+  padding: 10px;
+  color: #000d3f;
   text-decoration: none;
-  color: white;
+  transition: color 0.3s;
+  text-align: end;
 }
 
-@media screen and (max-width: 600px) {
-  .menu {
+/* .menu a:hover {
+  color: #221a13;
+} */
+
+.burger {
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.burger .line {
+  width: 100%;
+  height: 2px;
+  background-color: #000d3f;
+  margin-bottom: 5px;
+  transition: 0.2s linear;
+}
+.burger {
+  display: none;
+}
+
+/* MENU I MOBILEVIEW */
+@media screen and (max-width: 800px) {
+  .menu,
+  .min_profil {
     display: none;
-    flex-direction: column;
-    background-color: #333;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
   }
-
-  .menu-toggle:checked + .burger-menu + .navbar .menu {
-    display: flex;
-  }
-
-  .menu li {
-    margin: 0;
-    text-align: center;
-  }
-
-  .burger-menu {
+  .burger {
     display: block;
   }
-}
-
-.logo {
-  width: 70%;
-  height: auto;
-  position: absolute;
-  top: 22%;
-  left: 21%;
-}
-/* } */
-
-/* mellem view */
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
-  body,
-  html {
-    height: 100%;
-    margin: 0;
+  .burger.active .line:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+    transition: 0.2s linear;
   }
 
-  .screen {
-    background-image: url(img/veranda_ramme_med.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100vw;
-    height: 100vh;
+  .burger.active .line:nth-child(2) {
+    opacity: 0;
+    transition: 0.15s linear;
   }
 
-  .logo {
-    width: 25%;
-    height: auto;
+  .burger.active .line:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+    transition: 0.2s linear;
+  }
+
+  nav.active .menu {
+    display: block;
+    background-color: #e4dddd;
     position: absolute;
-    top: 24%;
-    left: 40%;
-  }
-}
-
-/* DESKTOP VIEW */
-@media only screen and (min-width: 1025px) {
-  /* ramme */
-  body,
-  html {
-    height: 100%;
-    margin: 0;
+    top: 161px;
+    right: 65px;
+    /* width: 100%; */
+    /* box-shadow: 0 0 10px rgba(123, 23, 23, 0.1); */
+    z-index: 1;
   }
 
-  .screen {
-    background-image: url(img/veranda_blueramme_desktop.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 100vw;
-    height: 100vh;
+  nav.active .menu li {
+    margin: 10px 20px;
   }
-  .logo {
-    width: 25%;
-    height: auto;
-    position: absolute;
-    top: 24%;
-    left: 40%;
+
+  nav.active .menu a {
+    font-size: 20px;
+  }
+
+  li {
+    width: 100%;
   }
 }
