--- a/mutual_styles.css
+++ b/mutual_styles.css
@@ -5,6 +5,13 @@
   font-style: normal;
 }
 
+body {
+  margin: 1cm;
+  border: 2px solid #283274;
+  box-sizing: border-box;
+  background-color: #f9f2f2;
+}
+
 /*fonte*/
 h1 {
   font-family: 'Apoc';
