--- a/press.css
+++ b/press.css
@@ -116,16 +116,12 @@ body {
   background-color: #f9f2f2;
 }
 
-.border {
+/* .border {
   margin: 1cm;
   border: 2px solid #000d3f;
   box-sizing: border-box;
   padding: 30px;
-}
-
-h1 {
-  margin-bottom: 40px;
-}
+} */
 
 /* .p_press {
   gjør den italic
