--- a/press.css
+++ b/press.css
@@ -123,9 +123,10 @@ body {
   padding: 30px;
 } */
 
-/* .p_press {
-  gjør den italic
-} */
+.p_press {
+  /* gjør den italic */
+  margin: 20px;
+}
 
 .center_img {
   margin: 0 auto;
