--- a/about_us.css
+++ b/about_us.css
@@ -1,21 +1,7 @@
-body {
-  margin: 1cm;
-  border: 2px solid #283274;
-  box-sizing: border-box;
-  background-color: #d2dedc;
-}
-
 @font-face {
-  font-family: "VerandaFont";
-  src: url("fonts/Apoc-BoldItalic.woff") format("woff");
-  src: url("fonts/Apoc-BoldItalic.woff2") format("woff2");
-}
-
-h1 {
-  font-family: VerandaFont;
-  font-size: 2em;
-  margin-bottom: 20px;
-  color: #333;
+  font-family: 'VerandaFont';
+  src: url('fonts/Apoc-BoldItalic.woff') format('woff');
+  src: url('fonts/Apoc-BoldItalic.woff2') format('woff2');
 }
 
 p {
@@ -29,73 +15,4 @@ img {
   max-width: 100%;
   height: auto;
   margin-bottom: 20px;
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.burger-menu {
-  display: none;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-.bar {
-  width: 25px;
-  height: 3px;
-  background-color: black;
-  margin: 5px 0;
-}
-
-.menu-list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-}
-
-.menu-list li {
-  margin-right: 20px;
-  text-align: center;
-}
-
-.menu-list a {
-  font-family: VerandaFont;
-  text-decoration: none;
-  color: black;
-}
-
-@media only screen and (max-width: 768px) {
-  .burger-menu {
-    display: flex;
-    margin-left: auto;
-    margin-top: -250px;
-  }
-
-  .menu-list {
-    display: none;
-    flex-direction: column;
-    width: 100%;
-    position: absolute;
-
-    top: 20px;
-    left: 0;
-    z-index: 1;
-    right: 0;
-  }
-
-  .menu-list.show {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .menu-list li {
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
 }
