insta plugin rose

--- a/layout_events.css
+++ b/layout_events.css
@@ -53,10 +53,7 @@ p {
   grid-gap: 20px;
 }
 
-/* Tilpas dette efter dine designbehov */
-/* styles.css */
-
-/* styles.css */
+/* insta plugin */
 
 .instagram-feed {
   display: flex;
