--- a/layout_events.css
+++ b/layout_events.css
@@ -53,7 +53,10 @@ p {
   grid-gap: 20px;
 }
 
-/* insta plugin */
+/* Tilpas dette efter dine designbehov */
+/* styles.css */
+
+/* styles.css */
 
 .instagram-feed {
   display: flex;
