--- a/press.css
+++ b/press.css
@@ -112,7 +112,6 @@ nav {
 
 /* SIDEN I MOBILE VIEW */
 body {
-  height: 100%;
   background-color: #f9f2f2;
 }
 
@@ -155,34 +154,40 @@ img {
 
 /* SIDEN I COMPUTER VIEW */
 @media (min-width: 800px) {
-  /* ramme */
-  body,
-  html {
-    height: 100%;
-    /* margin: 0; */
-  }
-
   .container_1_1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 20px;
   }
+
   .img1 {
-    grid-column: 2/2;
-    grid-row: 1/3;
+    grid-column: 2 / span 1; /* Set image to start in the second column and span 1 column */
+  }
+
+  .sammen1 {
+    grid-column: 1 / span 1; /* Set sammen1 to start in the first column and span 1 column */
+  }
+
+  .sammen2 {
+    grid-column: 1 / span 1; /* Set sammen2 to start in the first column and span 1 column */
   }
 
   .container2_1_1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 20px;
-    margin-top: 0px;
   }
+
   .order {
-    order: -1;
-    grid-column: 1/2;
-    grid-row: 1/3;
+    grid-column: 1 / span 1; /* Set image to start in the first column and span 1 column */
+  }
+
+  .tekst_cont_2 {
+    grid-column: 2 / span 1; /* Set tekst_cont_2 to start in the second column and span 1 column */
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr; /* Adjust the number of rows based on your content */
+    gap: 20px;
   }
 }
