--- a/layout_events.css
+++ b/layout_events.css
@@ -33,11 +33,12 @@
 }
 
 .billede {
-  text-align: center;
+  position: relative;
+  margin-left: 2rem;
 }
 
 .billede img {
-  max-width: 50%; /* Juster dette for at ændre størrelsen af det tredje billede */
+  max-width: 70%; /* Juster dette for at ændre størrelsen af det tredje billede */
 }
 
 .instagram {
@@ -113,4 +114,23 @@ p {
 .instagram-post .timestamp span {
   font-size: 12px;
   color: #888;
+}
+
+#popImage,
+#popImage2 {
+  opacity: 0; /* Billede starter usynligt */
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.pop-animation {
+  animation: fadeIn 0.5s ease-in-out; /* Brug fadeIn-animationen for at få billedet til at fade ind */
 }
