--- a/about_us.css
+++ b/about_us.css
@@ -11,8 +11,54 @@ p {
   line-height: 1.6;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+.texts {
+  background-color: #d2dedc;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 20px;
+}
+
+.texts p {
+  margin: 0;
+}
+
+.billede1_container {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.image1 img {
+  max-width: 100%;
+  border-radius: 5px;
+}
+
+.text2 {
+  padding-left: 20px;
+}
+
+.billede2_container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 30px;
+}
+
+.image2 img {
+  max-width: 45%; /* Adjust as needed */
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.text3 {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.team-images img {
+  max-width: 100%;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
