--- a/mutual_styles.css
+++ b/mutual_styles.css
@@ -16,6 +16,7 @@ body {
   border: 2px solid #283274;
   box-sizing: border-box;
   background-color: #f9f2f2;
+  padding: 1cm;
 }
 header {
   background-color: #f9f2f2;
