--- a/press.css
+++ b/press.css
@@ -117,13 +117,6 @@ body {
   background-color: #f9f2f2;
 }
 
-/* .border {
-  margin: 1cm;
-  border: 2px solid #000d3f;
-  box-sizing: border-box;
-  padding: 30px;
-} */
-
 .p_press {
   font-style: italic;
   margin: 20px;
@@ -154,7 +147,25 @@ img {
   margin-top: 50px;
 }
 
+/* fade in and out img */
+#popImage3,
+#popImage4 {
+  opacity: 0; /* Billede starter usynligt */
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.pop-animation {
+  animation: fadeIn 0.5s ease-in-out; /* Brug fadeIn-animationen for at få billedet til at fade ind */
+}
 
 
 
