press helt done ronja + blå links

--- a/press.css
+++ b/press.css
@@ -167,6 +167,30 @@ img {
   animation: fadeIn 0.5s ease-in-out; /* Brug fadeIn-animationen for at få billedet til at fade ind */
 }
 
+/* Links */
+/* Remove underline and set color for regular link */
+a {
+  text-decoration: none; /* Removes underline */
+  color: #000691; /* Set your desired text color */
+}
+
+/* Set color for visited link */
+a:visited {
+  color: #000691; /* Set your desired visited link color */
+}
+
+/* Set color for link on hover */
+a:hover {
+  color: #000691; /* Set your desired hover color */
+}
+
+/* Set color for active/focused link */
+a:active,
+a:focus {
+  color: #000691; /* Set your desired active/focused link color */
+}
+
+
 
 
 
