--- a/mutual_styles.css
+++ b/mutual_styles.css
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: 'Apoc';
-  src: url('fonts/Apoc_Regular.woff2') format('woff2');
+  font-family: "Apoc";
+  src: url("fonts/Apoc_Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'p';
-  src: url(/fonts/Apoc_Regular.woff2) format('woff2');
+  font-family: "p";
+  src: url(/fonts/Apoc_Regular.woff2) format("woff2");
   font-weight: normal;
   font-style: normal;
 }
@@ -23,21 +23,21 @@ header {
 }
 /*fonte*/
 h1 {
-  font-family: 'Apoc';
+  font-family: "Apoc";
   text-align: center;
-  font-size: 35px;
+  font-size: 45px;
   color: #000d3f;
   padding-bottom: 2rem;
 }
 
 .menu {
-  font-family: 'Apoc';
+  font-family: "Apoc";
   font-size: x-large;
   color: #000d3f;
 }
 
 p {
-  font-family: 'p';
+  font-family: "p";
 }
 
 /*footer*/
