--- a/about_us.css
+++ b/about_us.css
@@ -51,6 +51,10 @@
   max-width: 70%; /* Juster dette for at ændre størrelsen af det tredje billede */
 }
 
+.overlappende_billeder2 .billede3 {
+  height: 100%;
+}
+
 /* Paste the CSS styles here */
 .overlappende_billeder2 {
   display: grid;
@@ -58,19 +62,18 @@
   gap: 10px;
 }
 
-.overlappende_billeder2 img{
+.overlappende_billeder2 img {
   width: 100%;
   height: auto;
   opacity: 0;
   transition: opacity 1s ease-in-out;
 }
 
-
 .tekst1 {
   text-align: center;
   padding: 1rem;
-  font-family: "p"; Set width to 1/3 of the container */
-  box-sizing: border-box; /* Include padding in the width calculation */
+  font-family: "p";
+  box-sizing: border-box;
 }
 
 .tekst2 {
@@ -80,7 +83,7 @@
   padding-bottom: 1rem;
   font-size: larger;
   grid-column: span 2;
-   text-align: center;
+  text-align: center;
 }
 
 p {
@@ -117,18 +120,17 @@ p {
   animation: fadeIn 0.5s ease-in-out; /* Brug fadeIn-animationen for at få billedet til at fade ind */
 }
 
-
 .video-container {
-    position: relative;
-    width: 70%; /* Just an example, adjust width as needed */
-    height: 0;
-    padding-bottom: 40%; /* 16:9 aspect ratio (height/width) */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 0 33.33%; /* Fylder 1/3 af bredden */
+  position: relative;
 }
 
 .video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 50%;
+  top: 0;
+  left: 0;
+  width: 600px;
+  aspect-ratio: 1/1;
 }
